# browtrix

./: AGENTS.md  README.md  TASK.md  package.json
apps/server/: ENVIRONMENT.md  README.md  fastmcp.json  pyproject.toml
apps/server/src/browtrix_server/: __main__.py  settings.py
apps/server/src/browtrix_server/core/: __init__.py  resources.py
apps/server/src/browtrix_server/core/connection/: manager.py
apps/server/src/browtrix_server/core/tools/: alert_tool.py  popup_tool.py  snapshot_tool.py
apps/server/src/browtrix_server/tests/: test_errors.py  test_integration.py  test_popup_tool.py  test_resources.py  test_server.py  test_snapshot_tool.py  test_types.py
apps/web/: .env.example  README.md  biome.json
apps/web/src/: index.css
browtrix/: README.md  package.json
browtrix/apps/server/: .env.example  .gitignore  MCP_CLIENT_SETUP.md  MCP_SERVER_README.md  README.md  main.py  package.json  pyproject.toml
browtrix/apps/server/__tests__/: analyze_sse_issues.py  test_browtrix_mcp.py  test_complete_system.py  test_full_functionality.py  test_mcp.py  test_mcp_client.py  test_mcp_client_fixed.py  test_mcp_proper.py  test_mcp_server.py  test_snapshot.py  test_sse_issue.py  test_web_app_connection.py
browtrix/apps/server/src/browtrix_server/: __init__.py  __main__.py  connection_manager.py  server.py  settings.py
browtrix/apps/server/src/browtrix_server/core/: __init__.py  resources.py
browtrix/apps/server/src/browtrix_server/core/connection/: __init__.py  errors.py  manager.py
browtrix/apps/server/src/browtrix_server/core/tools/: __init__.py  alert_tool.py  base.py  popup_tool.py  snapshot_tool.py
browtrix/apps/server/src/browtrix_server/core/types/: __init__.py  requests.py  responses.py
browtrix/apps/server/src/browtrix_server/tests/: test_alert_tool.py  test_connection_manager.py  test_integration.py  test_resources.py  test_server.py  test_settings.py  test_types.py
docs/: IMPLEMENTATION_PLAN.md  TASK.md
(+40 files in other folders)
